<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">E-Tipitaka</string>
    <string name="th_searching">กำลังค้นหา</string>
    <string name="th_found">ค้นเจอทั้งหมด</string>
    <string name="th_page">หน้า</string>
    <string name="th_search">ค้นหา</string>
    <string name="th_book_label">เล่มที่</string>
    <string name="th_page_label">หน้าที่</string>
    <string name="th_items_label">ข้อที่</string>
    <string name="th_read">  อ่าน  </string>
    <string name="th_lang">ภาษาไทย</string>
    <string name="pl_lang">ภาษาบาลี</string>
    <string name="th">ไทย</string>
    <string name="pl">บาลี</string>
    <string name="th_tipitaka_label">พระไตรปิฎก บาลีสยามรัฐ</string>
    <string name="th_tipitaka_book">พระไตรปิฎก บาลีสยามรัฐ เล่มที่</string>
    <string name="search_hint">ป้อนคำค้นหา</string>
    <string name="read_page">อ่านพระไตรปิฎก</string>
    <string name="search_page">ผลลัพธ์การค้นหา</string>
    <string name="not_found">ไม่พบคำที่ต้องการค้นหา</string>
    <string name="goto_page">อ่านหน้าที่</string>
    <string name="goto_item">อ่านข้อที่</string>
    <string name="enter_page">ป้อนเลขหน้า</string>
    <string name="enter_item">ป้อนเลขข้อ</string>
    <string name="between_page">ตั้งแต่หน้าที่</string>
	<string name="between_item">ตั้งแต่ข้อที่</string>
	<string name="more_found">มีมากกว่าหนึ่งแห่ง</string>
	<string name="select_lang">เลือก</string>
	<string name="change_lang">เปลื่ยนภาษา</string>
	<string name="compare">เทียบเคียง</string>
	<string name="regex_item">\\n\\s*\\[[๐๑๒๓๔๕๖๗๘๙]+?\\]|^\\s*\\[[๐๑๒๓๔๕๖๗๘๙]+?\\]</string>
	<string name="zoom_in">ขยาย</string>
	<string name="zoom_out">ย่อ</string>
	<string name="find_thai">ค้นหาภาษาไทย</string>
	<string name="find_pali">ค้นหาภาษาบาลี</string>
	<string name="vinai">พระวินัยฯ</string>
	<string name="suttan">พระสุตตันตฯ</string>
	<string name="abhidum">พระอภิธรรมฯ</string>
	<string name="ss_vinai">วิ.</string>
	<string name="ss_suttan">สุ.</string>
	<string name="ss_abhidum">อภิ.</string>
	<string name="s_page">น.</string>
	<string name="s_sut">ส.</string>		
	<string name="s_vinai">วินัยฯ</string>
	<string name="s_suttan">สุตตันตฯ</string>
	<string name="s_abhidum">อภิธรรมฯ</string>	
	<string name="vinai_full">พระวินัยปิฎก</string>
	<string name="suttan_full">พระสุตตันตปิฎก</string>
	<string name="abhidum_full">พระอภิธรรมปิฎก</string>
	<string name="th_suttra">พระสูตร</string>
	<string name="select_item_compare">เลือกข้อที่ต้องการเทียบเคียง</string>
	<string name="select_item_memo">เลือกข้อที่ต้องการจดจำ</string>
	<string name="all">ทั้งหมด</string>
	<string name="ok">ตกลง</string>
	<string name="select_cate">เลือกหมวดหมู่ที่ต้องการค้นหา</string>
	<string name="clear_history">ลบประวัติค้นหา</string>
	<string name="yes">ใช่</string>
	<string name="no">ไม่</string>
	<string name="confirm_clear_history">คุณแน่ใจหรือไม่ที่จะลบประวัติการค้นหาทั้งหมด?</string>
	<string name="memo">จดจำ</string>
	<string name="delete_memo">ลบรายการจดจำ</string>
	<string name="enter_note">ใส่ข้อความที่ต้องการจดบันทึกเพิ่มเติม</string>
	<string name="save">บันทึก</string>
	<string name="bookmark">ดูรายการจดจำ</string>
	<string name="change_language">เปลี่ยนภาษา</string>
	<string name="manage_bookmark">แก้ไข</string>
	<string name="delete">ลบ</string>
	<string name="edit">แก้ไข</string>
	<string name="edit_note">แก้ไขข้อมูลการจดบันทึก</string>
	<string name="confirm_delete_item">คุณแน่ใจหรือไม่ที่จะลบรายการนี้?</string>
	<string name="delete_item">ลบการจดจำ</string>
	<string name="spinner_lang_prompt">เลือกภาษา</string>
	<string name="enter_thai">ป้อนภาษาไทย</string>
	<string name="enter_pali">ป้อนภาษาบาลี</string>	
	<string name="private_info">ข้อมูลส่วนตัว</string>
	<string name="import_info">นำเข้าจาก SD การ์ด</string>
	<string name="export_info">ส่งออกไปที่ SD การ์ด</string>
	<string name="error_found">พบข้อผิดพลาด</string>
	<string name="db_not_found">ไม่พบฐานข้อมูล</string>
	<string name="cannot_write">ไม่สามารถเขียนข้อมูลลงที่</string>
	<string name="export_success">การส่งออกข้อมูลสำเร็จ</string>
	<string name="import_success">การนำเข้าข้อมูลสำเร็จ</string>
	<string name="saveinfo_not_found">ไม่พบไฟล์ข้อมูลส่วนตัวใน SD การ์ด</string>
	<string name="downloading">กำลังดาวน์โหลดข้อมูล</string>
	<string name="finish">สำเร็จ</string>
	<string name="file_exists">พบไฟล์เดิมที่มีอยู่แล้ว</string>
	<string name="confirm_overwrite">คุณแน่ใจหรือไม่ที่จะเขียนทับไฟล์เดิม?</string>
	<string name="zero_zero">(๐/๐)</string>
	<string name="recall_data">เรียกดูข้อมูล</string>
	<string name="please_wait">กรุณารอสักครู่</string>
	<string name="desc">มากไปน้อย</string>
	<string name="asc">น้อยไปมาก</string>
	<string name="order_entry">ลำดับการนำเข้า</string>
	<string name="keywords">ลำดับอักษรของคำค้นหา</string>
	<string name="suts_number">จำนวนพระสูตรที่พบ</string>
	<string name="sorting_prefs">ตั้งค่าวิธีเรียงลำดับประวัติคำค้นหา</string>
	<string name="sorting_bookmark_prefs">ตั้งค่าวิธีเรียงลำดับการจดจำ</string>
	<string name="unread">ยังไม่ได้อ่าน</string>
	<string name="unread_all">ยังไม่ได้อ่านทั้งหมด</string>
	<string name="confirm_unread_all_items">คุณแน่ใจหรือไม่ที่จะกำหนดให้ทุกรายการยังไม่ได้อ่าน?</string>
	<string name="unread_all_items">กำหนดให้ทุกรายการยังไม่ได้อ่าน</string>
	<string name="freq_format">(%s ครั้ง)</string>
	<string name="recall_freq">จำนวนครั้งการเรียกดู</string>
	<string name="data_not_found">ไม่พบข้อมูลที่ถูกจัดเก็บไว้</string>
	<string name="please_search_again">กรุณาค้นหาด้วยคำค้นหานี้ใหม่อีกครั้ง</string>
	<string name="confirm_download">คุณต้องการดาวน์โหลดฐานข้อมูลหรือไม่?</string>
	<string name="internet_not_connected">ไม่สามารถเชื่อมต่ออินเทอร์เน็ตได้</string>
	<string name="check_your_connection">กรุณาตรวจสอบการเชื่อมต่ออินเทอร์เน็ต และทดลองเปิดโปรแกรมใหม่อีกครั้ง</string>
	<string name="unzipping_db">โปรแกรมกำลังขยายไฟล์ฐานข้อมูล</string>
	<string name="unzipped">ขยายไฟล์สำเร็จ</string>
	<string name="limitation">ขอบเขตของโปรแกรม</string>
	<string name="caution">
		จำนวนพระสูตรที่แสดงในผลลัพธ์การค้นหาเป็น การประมาณเพียงเพื่อให้เห็นภาพโดยรวมของ ปริมาณพระสูตร
		&lt;font color=&quot;#FFFFFF&quot;&gt;ที่มีหรือไม่มี / มากหรือน้อย&lt;/font&gt; แค่ไหน ในแต่ละปิฎกเท่านั้น 
		ถ้าต้องการจำนวนพระสูตร ที่ถูกต้องอย่างแท้จริง ให้ตรวจสอบในตำแหน่ง ที่ปรากฏโดยละเอียดต่อไป
	</string>
	<string name="about">เกี่ยวกับโปรแกรม</string>
	<string name="about_content_1">พัฒนาโดย นาย สุธี สุดประเสริฐ ภายใต้คำแนะนำของ\nพระอาจารย์คึกฤทธิ์ โสตฺถิผโล และ พระชัยณรงค์ ถาวโร</string>
	<string name="about_content_2">โปรแกรมถูกพัฒนาขึ้นมาเพื่อ\nค้นหาและเทียบเคียงพุทธวจนในพระไตรปิฎก\nซึ่งสอดคล้องกับพระสูตรที่พระพุทธเจ้าได้ตรัสไว้คือ</string>
	<string name="about_content_3">๑. ทรงกำชับให้ศึกษาปฏิบัติเฉพาะจากคำของพระองค์เท่านั้น\n(ทุก. อํ. ๒๐/๙๒/๒๙๒ ภาษาบาลี)</string>
	<string name="about_content_4">๒. ทรงบอกวิธีแก้ไขความผิดเพี้ยนในคำสอน (หลักมหาปเทส ๔)\n(อุปริ. ม. ๑๔/๕๓/๔๑ ภาษาบาลี)</string>
	<string name="program_thai_name">โปรแกรมค้นหาและเทียบเคียง\nพุทธวจนในพระไตรปิฎก</string>
	<string name="license">E-Tipitaka เป็นซอฟท์แวร์เสรี ตามสนธิสัญญา Apache 2.0</string>
	<string name="edit_n_suts">แก้ไขจำนวนพระสูตร</string>
	<string name="enter_n_suts">ป้อนจำนวนพระสูตร</string>
	<string name="assign_priority">กำหนดค่าหมายเลขลำดับ</string>
	<string name="assign">กำหนดค่า</string>
	<string name="enter_priority">เลขสี่หลัก</string>
	<string name="priority_number">หมายเลขลำดับ</string>
	<string name="move_up">เลื่อนขึ้น</string>
	<string name="move_down">เลื่อนลง</string>
	<string name="recompute_priority">คำนวณหมายเลขลำดับใหม่</string>
	<string name="confirm_recompute_priority">คุณแน่ใจหรือไม่ที่จะคำนวณ หมายเลขลำดับใหม่?</string>
	<string name="confirm_command">คุณแน่ใจหรือไม่ที่จะดำเนินการต่อไป?</string>
	<string name="enter_a_to_z">A-Z</string>
	<string name="code">รหัส</string>
	<string name="number">หมายเลข</string>
	<string name="goto_position">ไปที่ตำแหน่ง</string>
	<string name="enter_position">ป้อนตำแหน่ง</string>
	<string name="goto_result_position">ไปที่ผลลัพธ์ตำแหน่งที่</string>
	<string name="duplicated_item">รายการนี้เคยถูกบันทึกไว้แล้ว</string>
	<string name="swap_lang">สลับภาษา</string>
	<string name="note_top">ลำดับอักษรคำบันทึก</string>
	<string name="volume_page">เลขเล่ม-หน้า</string>
	<string name="sorting">เรียงลำดับ</string>
	<string name="marked">ติดดาว</string>
	<string name="unmarked">ลบดาว</string>	
	<string name="confirm_delete_memo">คุณแน่ใจหรือไม่ ที่จะลบการจดจำทั้งหมดสำหรับผลการค้นหานี้?</string>
	<string name="deleted_memo">รายการจดจำถูกลบแล้ว</string>
	<string name="memo_not_found">ไม่พบรายการจดจำ</string>
</resources>
