<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">
	<RadioGroup 
		android:layout_alignParentTop="true"
		android:orientation="vertical"
		android:id="@+id/RadioGroup01" 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content">
		<RadioButton
			android:id="@+id/sort_by_id"
			android:text="@string/order_entry"/>
		<RadioButton
			android:id="@+id/sort_by_note"
			android:text="@string/note_top"/>
		<RadioButton
			android:id="@+id/sort_by_volume_page"
			android:text="@string/volume_page"/>				
	</RadioGroup>
	<RadioGroup 
		android:layout_below="@id/RadioGroup01" 
		android:id="@+id/RadioGroup02" 
		android:layout_marginTop="5dp"
		android:orientation="horizontal"
		android:gravity="center"
		android:layout_centerHorizontal="true"
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content">
		<RadioButton
			android:id="@+id/asc_sort"
			android:layout_marginRight="10dp"
			android:text="@string/asc"/>
		<RadioButton
			android:id="@+id/desc_sort"
			android:text="@string/desc"/>			
	</RadioGroup>
	<Button
		android:id="@+id/sort_ok"
		android:text="@string/ok"
		android:layout_centerHorizontal="true"
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:layout_marginTop="15dp"
		android:layout_marginBottom="5dp"
		android:layout_below="@id/RadioGroup02"/>
</RelativeLayout>
