<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_marginTop="3dp"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content">
  	
  	<LinearLayout
  		android:layout_width="fill_parent"
  		android:layout_height="wrap_content"
  		android:orientation="vertical"
  		android:background="@drawable/my_border">
		<RelativeLayout 
			android:id="@+id/search_dialog_layout" 
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content">		
			<Button
				android:id="@+id/query_btn"
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:text="@string/th_search"
				android:layout_alignParentRight="true"/>
			<Spinner
				android:id="@+id/lang_spinner"
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:prompt="@string/spinner_lang_prompt"
				android:layout_alignParentLeft="true"/>
			<EditText
				android:id="@+id/search_text"
				android:textSize="22dp"
				android:singleLine="true"
				android:layout_height="wrap_content"
				android:layout_width="fill_parent"
				android:layout_toRightOf="@id/lang_spinner"
				android:layout_toLeftOf="@id/query_btn"/>							
		</RelativeLayout>
		<RelativeLayout
			android:id="@+id/filter_layout"
			android:layout_height="wrap_content"
			android:layout_width="fill_parent">
			
			<TextView
				android:id="@+id/code_label"
				android:textSize="18dp"
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:text="@string/code"
				android:layout_alignParentLeft="true"
				android:layout_centerVertical="true"
				android:paddingLeft="5dp"
				android:layout_marginRight="3dp"
			/>
			<EditText
				android:id="@+id/code_text"
				android:textSize="18dp"
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:layout_toRightOf="@id/code_label"
				android:layout_centerVertical="true"
				android:layout_marginRight="5dp"
				android:hint="@string/enter_a_to_z"
				android:inputType="textCapCharacters"
		    	android:maxLength="1"
		    	android:maxLines="1" 
			/>
			<TextView
				android:id="@+id/number_label"
				android:textSize="18dp"
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:text="@string/number"
				android:layout_toRightOf="@id/code_text"
				android:layout_centerVertical="true"
				android:layout_marginRight="3dp"
			/>
			<EditText
				android:id="@+id/number_text"
				android:textSize="18dp"
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:layout_toRightOf="@id/number_label"
				android:layout_centerVertical="true"
				android:hint="@string/enter_priority"
		    	android:inputType="number"
		    	android:maxLength="4"
		    	android:maxLines="1" 			
			/>
		</RelativeLayout>  	
  	</LinearLayout>
  		

	<ListView 
		android:id="@+id/search_history_listview"
		android:background="#FF000000"
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		android:drawSelectorOnTop="true"
		android:smoothScrollbar="true"
		android:layout_below="@id/filter_layout"
		/>
</LinearLayout>
